# gtest_integrate

./: CMakeLists.txt  README.md  main.cpp
cmake/: googletest.cmake  spdlog.cmake
src/: most_water.cpp
